# img2fmri

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  analysis.py  aperture_notebook.ipynb  img2fmri_commcon_adapted-from-ipynb-example.py  imgtofmri.py  imgtofmri_command_line.sh  imgtofmri_command_line_AVC.sh  imgtofmri_command_line_commcon.sh  overview.ipynb  pyproject.toml  requirements.txt  utils.py
docs/source/: conf.py  index.rst  predict.rst
img2fmri/: __init__.py  predict.py  utils.py
img2fmri/derivatives/: shape_array.npy
img2fmri/derivatives/sub1.anat/: T1_nonroi2roi.mat
img2fmri/models/: subj1_EarlyVis_model.pkl  subj1_LOC_model.pkl  subj1_PPA_model.pkl  subj1_RSC_model.pkl  subj2_LOC_model.pkl  subj2_OPA_model.pkl  subj2_PPA_model.pkl  subj3_EarlyVis_model.pkl  subj3_LOC_model.pkl  subj3_OPA_model.pkl  subj3_PPA_model.pkl  subj3_RSC_model.pkl
img2fmri/tests/: run_test.py
model_training/: README.md  model_training.ipynb  stimuli_list.pkl
models/: subj1_EarlyVis_model.pkl  subj1_LOC_model.pkl  subj1_OPA_model.pkl  subj1_PPA_model.pkl  subj1_RSC_model.pkl  subj2_EarlyVis_model.pkl  subj2_LOC_model.pkl  subj2_OPA_model.pkl  subj2_PPA_model.pkl  subj2_RSC_model.pkl  subj3_EarlyVis_model.pkl  subj3_LOC_model.pkl  subj3_OPA_model.pkl  subj3_PPA_model.pkl  subj3_RSC_model.pkl
models_prefinal_ithinkcentercropped/: subj1_LOC_model.pkl  subj1_RSC_model.pkl  subj2_PPA_model.pkl  subj3_EarlyVis_model.pkl  subj3_LOC_model.pkl  subj3_OPA_model.pkl  subj3_PPA_model.pkl  subj3_RSC_model.pkl
(+2 files in other folders)
